--- a/src/components/header/Select.css
+++ b/src/components/header/Select.css
@@ -1,3 +1,50 @@
 .middle {
-  margin-top: 20px;
+  margin-top: 30px;
+}
+.slider {
+  height: 10px;
+  width: 100%;
+  background-color: orange;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+/* Styles for the slider thumb */
+.slider .thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background-color: gray;
+  cursor: grab;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+/* Styles for the slider active state */
+.slider .thumb.active {
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+.container {
+  width: 30vw;
+  display: inline-block;
+}
+input {
+  height: 25px;
+  border: 0.3px solid rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+}
+input,
+select,
+textarea {
+  color: rgba(0, 0, 0, 0.6);
+}
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
+span {
+  color: rgba(0, 0, 0, 0.6);
+}
+.bottomselect {
+  margin-top: 30px;
 }
