--- a/src/components/header/Select.css
+++ b/src/components/header/Select.css
@@ -1,10 +1,10 @@
 .middle {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 .slider {
   height: 10px;
   width: 100%;
-  background-color: orange;
+  background-color: rgb(244, 152, 73);
   border-radius: 5px;
   margin-top: 10px;
 }
